# AI_news_summariser_chatbot

./: README.md  pyproject.toml
AINews/: daily_summary.md  monthly_summary.md  weekly_summary.md
